--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,15 @@
 * {
     margin:0;
     padding:0;  
+    font-family: fantasy;
   }
   
+  .header {
+    padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: rgb(227, 200, 160);
+    color: #000000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;  
+}
