--- a/assets/style.css
+++ b/assets/style.css
@@ -13,3 +13,17 @@
     justify-content: space-between;
     align-items: center;  
 }
+
+img {
+  background-blend-mode: screen;
+  width: 50px;
+  height: 100px;
+}
+
+
+.content {
+  width: 80%;
+  display:inline-block;
+  text-align: center;
+  
+}
