--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ img {
 .extrapic {
   background-color: rgb(227, 200, 160);
   border: 2px solid black;
-  padding: 10px 20px;
+  width: 80%;
 }
 
 .horiseon {
